openebspod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openebs-nfs-provisioner
  namespace: default
  labels:
    name: openebs-nfs-provisioner
    openebs.io/component-name: openebs-nfs-provisioner
    openebs.io/version: 0.10.0
spec:
  selector:
    matchLabels:
      name: openebs-nfs-provisioner
      openebs.io/component-name: openebs-nfs-provisioner
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: openebs-nfs-provisioner
        openebs.io/component-name: openebs-nfs-provisioner
        openebs.io/version: 0.10.0
    spec:
      serviceAccountName: openebs-maya-operator
      containers:
      - name: openebs-provisioner-nfs
        imagePullPolicy: IfNotPresent
        image: openebs/provisioner-nfs:0.10.0
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - test `pgrep "^provisioner-nfs.*"` = 1
          initialDelaySeconds: 30
          periodSeconds: 60
        resources:
          requests:
            cpu: 50m
            memory: 50M
          limits:
            cpu: 200m
            memory: 200M
