app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
      - name: staticfiles
        persistentVolumeClaim:
          claimName: staticfiles

      containers:
      - name: app
        image: selimica/django-web-app:latest
        volumeMounts: 
        - mountPath: "/static"
          name: staticfiles
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  #nginx is looking for servicename app in its configmap.So, Servicename should match withnginx config
  name: app
spec:
  selector:
    app: app
  ports:
  - port: 8000
    targetPort: 8000
