nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: staticfiles
        persistentVolumeClaim:
          claimName: staticfiles

      containers:
      - name: nginx
        image: selimica/django-web-nginx:latest
        volumeMounts: 
        - mountPath: "/static"
          name: staticfiles
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
